# face-plm

./: .gitignore  .python-versions  LICENSE  README.md  pyproject.toml
adk_dl/: __init__.py  data.py  losses.py  models.py  utils.py
adk_dl/fine_tune/: data.py
adk_dl/inference/: __init__.py  utils.py
data/: adk_5fold_cross_val_orgs.json  adk_evo-scale_dataset.csv
face_plm/: __init__.py
face_plm/embed_gen/: ankh_utils.py  embed.py  embed_all_layers.py  esm_utils.py  prott5_utils.py
face_plm/inference/: utils.py
face_plm/mlm_finetune/: data.py
face_plm/probes/: data.py  utils.py
fine_tuning/: launch_finetune.py  launch_finetune_mlm.py  launch_finetune_regression.py  run_lora_direct_inference.py
fine_tuning/config/: ankh_base_ft_kcat.yaml  ankh_base_ft_kcat_dropout.yaml  ankh_large_ft_ec27.yaml
scripts/: finetune_mlm.sh  get_all_layer_ankh_embedding.sh  get_all_plm_embedding.sh  get_all_plm_embedding_no_esm.sh  no_torch_probing.sh  setup_embed_env.sh  train_cross_val_direct_finetune.sh  train_cross_val_model.sh  train_cross_val_model_ankh_multilayer.sh  train_single_model.sh
src/face_plm/: __init__.py
training/: launch_training.py  launch_training_cross_val.py  launch_training_cross_val_by_layer.py  launch_training_cross_val_multi_agg.py  train_esm_regressor_cross-val.py
training/config/: ESM3_sm_open_v1-agg_mlp.yaml  ESM3_sm_open_v1-vit_tiny.yaml  ESMc_600m_transformer_regressor_single_head.yaml  ESMc_600m_transformer_regressor_single_layer.yaml  ESMc_600m_transformer_regressor_vit_tiny.yaml  ProstT5-agg_mlp.yaml  ProstT5-vit_tiny.yaml  ankh_base-agg_mlp.yaml  ankh_base-vit_tiny.yaml  ankh_base_layer_specific_0-12.yaml  ankh_base_layer_specific_13-20.yaml  ankh_base_layer_specific_21-35.yaml  ankh_base_layer_specific_31-38.yaml  ankh_base_layer_specific_39-47.yaml  ankh_base_layer_specific_48.yaml  ankh_large-agg_mlp.yaml  ankh_large-agg_mlp_low_lr.yaml  ankh_large-vit_tiny.yaml  esmc_600m-agg_mlp.yaml  (+4 more)
training_probe/: launch_notorch_layerwise_probes.py  launch_notorch_probes.py  launch_training.py  launch_training_cross_val.py  launch_training_cross_val_by_layer.py  launch_training_cross_val_multi_agg.py
(+42 files in other folders)
