[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "face_plm"
authors = [{name = "Parker Grosjean", email = "parker.grosjean@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "tokenizers==0.20.3",
    "torch==2.5.1",
    "transformers==4.46.3",
    "triton==3.1.0",
    "zstandard==0.23.0",
    "zstd==1.5.6.1",
    "safetensors==0.4.5",
    "scikit-learn==1.6.0",
    "scipy==1.14.1",
    "scprep==1.2.3",
    "seaborn==0.13.2",
    "sentencepiece==0.1.99",
    "omegaconf==2.3.0",
    "pandas",
    "peft",
    "phate==1.0.11",
    "protobuf==5.29.2",
    "pyarrow==18.1.0",
    "pycparser",
    "pydantic==2.10.4",
    "pydantic_core==2.27.2",
    "networkx",
    "numcodecs==0.13.1",
    "numpy==1.26.0",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "matplotlib==3.10.0",
    "huggingface-hub==0.27.0",
    "hydra-core==1.3.2",
    "ankh==1.10.0",
]

requires-python = ">=3.10"

[tool.uv]
package-dir = "face_plm"
project-root = "."

[tool.uv.venv]
# Defines the virtual environment directory
path = ".venv"