[project]
name = "face_plm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "esm>=3.1.0",
    "huggingface-hub[cli]>=0.30.2",
    "hydra-core>=1.3.2",
    "numpy<2",
    "pandas>=2.2.3",
    "peft>=0.15.1",
    "regex>=2024.11.6",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "transformers>=4.48",
    "wandb>=0.19.9",
    "zarr>=2.18.2",
]
